# 15721-final-project

./: .gitignore  README.md
libpg_query/: main.c
poc/: CMakeLists.txt  Makefile  Makefile-old  conn_pool.cpp  conn_pool.hpp  main.cpp  poc  test.cpp
poc/.build/: Makefile
poc/dependencies/libduckdb-osx-universal/: duckdb.hpp  test.cpp
python_transpiler/: .gitignore  README.md  Supported Statement.md  TODO.md  makefile  tmp.py
python_transpiler/archive/test1/: udf.cpp  udf.hpp
python_transpiler/archive/test2/: CMakeLists.txt  Makefile  test.cpp  udf.cpp
python_transpiler/archive/test3/: test.cpp  udf.cpp
python_transpiler/archive/testbackup/: test.cpp  udf.cpp
python_transpiler/archive/testbackup2/: test.cpp  udf.cpp
python_transpiler/samples/: addnums.sql  conditions.sql  loops.sql  simple.sql  tpch_queries.sql  tpch_udfs_no_func_calls.sql  udf-q19.sql
python_transpiler/test/: CMakeLists.txt  Makefile  temp1.txt  temp2.txt  temp3.txt  temp4.txt  temp5.txt  temp6-s5.txt  test  test copy.cpp  test.cpp  udf copy.cpp  udf.cpp  udf.hpp
python_transpiler/test/dependencies/libduckdb-osx-universal/: duckdb.hpp
python_transpiler/test/dependencies/libduckdb-src/: duckdb.hpp
python_transpiler/test1/: test.cpp
python_transpiler/test2/: test.cpp  udf.cpp
python_transpiler/test3/: udf.hpp
python_transpiler/testbackup2/: udf.hpp
python_transpiler/udftranspiler/: setup.py
python_transpiler/udftranspiler/libraries/pglast/: .gitmodules
python_transpiler/udftranspiler/samples/: conditions_sample.sql  loops_sample.sql
python_transpiler/udftranspiler/udftranspiler/: README.md  __init__.py  control.yaml  example.yaml  function.yaml  query.py  query.yaml  trans.py  utils.py
tpch-kit/: README.md  populate.sh  print.py
tpch-kit-new/: populate.sh  references.md
tpch-kit-new/queries/: tpch-q11.sql  tpch-q12.sql  tpch-q14.sql  tpch-q20.sql  tpch-q22.sql  tpch-q3.sql  tpch-q5.sql  tpch-q8.sql
tpch-kit/dbgen/: query-maker.sh
tpch-kit/queries/: tpch-q1.sql  tpch-q10.sql  tpch-q13.sql  tpch-q15.sql  tpch-q16.sql  tpch-q17.sql  tpch-q18.sql  tpch-q19.sql  tpch-q2.sql  tpch-q21.sql  tpch-q4.sql  tpch-q6.sql  tpch-q7.sql  tpch-q9.sql  tpch-stream.sql
udf_transpiler/: README.md  setup.py
(+4 files in other folders)
